add test for HTML query

--- a/IGHTMLQueryTests/Fixtures/sample.html
+++ b/IGHTMLQueryTests/Fixtures/sample.html
@@ -18,6 +18,7 @@
         <p>To prove that they work, you can execute either of the following links:
         <ul>
             <li>To a <a href="hello.html">Hello Page</a></li>
+            <li>To another <a href="about.html">Page</a></li>
         </ul>
     </body>
 </html>
